@@ -178,7 +178,7 @@ void CUDPFirewallTester::ReCheckFirewallUDP(bool setUnverified)
 	m_isFWVerifiedUDP = (m_isFWVerifiedUDP && !setUnverified);
 	CSearchManager::FindNodeFWCheckUDP(); // start a lookup for a random node to find suitable IPs
 	m_nodeSearchStarted = true;
-	CKademlia::GetPrefs()->SetExternKadPort(0);
+	CKademlia::GetPrefs()->FindExternKadPort(true);
 }
 
 void CUDPFirewallTester::Connected()
@@ -210,7 +210,7 @@ void CUDPFirewallTester::Reset()
 
 void CUDPFirewallTester::QueryNextClient()
 {	// try the next available client for the firewallcheck
-	if (!IsFWCheckUDPRunning() || !GetUDPCheckClientsNeeded() || CKademlia::GetPrefs()->GetExternalKadPort() == 0) {
+	if (!IsFWCheckUDPRunning() || !GetUDPCheckClientsNeeded() || CKademlia::GetPrefs()->FindExternKadPort(false)) {
 		return; // check if more tests are needed and wait till we know our extern port
 	}
 
